--- a/docker-data/redis-cluster.tmpl
+++ b/docker-data/redis-cluster.tmpl
@@ -3,5 +3,6 @@ port ${PORT}
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
-appendonly yes
+appendonly no
+no-appendfsync-on-rewrite no
 dir /redis-data/${PORT}
